// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compute-gen WGSL snapshot — interpolate kernel > canonical interpolate-linear with 2 stops (degenerate-but-valid) 1`] = `
{
  "entryPoint": "eval_interpolate",
  "fieldOrder": [
    "mag",
  ],
  "wgsl": "@group(0) @binding(0) var<storage, read> feat_data: array<f32>;
@group(0) @binding(1) var<storage, read_write> out_color: array<u32>;
@group(0) @binding(2) var<uniform> u_count: vec4<u32>;

@compute @workgroup_size(64)
fn eval_interpolate(@builtin(global_invocation_id) gid: vec3<u32>) {
  let _cse0 = vec4<f32>(1.0, 1.0, 0.0, 1.0);
  let _cse1 = vec4<f32>(1.0, 0.0, 0.0, 1.0);
  if ((gid.x >= u_count.x)) {
    return;
  }
  let _v0 = feat_data[gid.x];
  var _v1: vec4<f32>;
  if ((_v0 <= 1.0)) {
    _v1 = _cse0;
  } else if ((_v0 <= 8.0)) {
    _v1 = mix(_cse0, _cse1, ((_v0 - 1.0) / 7.0));
  } else {
    _v1 = _cse1;
  }
  out_color[gid.x] = pack4x8unorm(_v1);
}
",
}
`;

exports[`compute-gen WGSL snapshot — interpolate kernel > canonical interpolate-linear with 3 colour stops 1`] = `
{
  "entryPoint": "eval_interpolate",
  "fieldOrder": [
    "rank",
  ],
  "wgsl": "@group(0) @binding(0) var<storage, read> feat_data: array<f32>;
@group(0) @binding(1) var<storage, read_write> out_color: array<u32>;
@group(0) @binding(2) var<uniform> u_count: vec4<u32>;

@compute @workgroup_size(64)
fn eval_interpolate(@builtin(global_invocation_id) gid: vec3<u32>) {
  let _cse0 = vec4<f32>(1.0, 1.0, 1.0, 1.0);
  let _cse1 = vec4<f32>(0.5333333333333333, 0.5333333333333333, 0.5333333333333333, 1.0);
  let _cse2 = vec4<f32>(0.0, 0.0, 0.0, 1.0);
  if ((gid.x >= u_count.x)) {
    return;
  }
  let _v0 = feat_data[gid.x];
  var _v1: vec4<f32>;
  if ((_v0 <= 0.0)) {
    _v1 = _cse0;
  } else if ((_v0 <= 5.0)) {
    _v1 = mix(_cse0, _cse1, (_v0 / 5.0));
  } else if ((_v0 <= 10.0)) {
    _v1 = mix(_cse1, _cse2, ((_v0 - 5.0) / 5.0));
  } else {
    _v1 = _cse2;
  }
  out_color[gid.x] = pack4x8unorm(_v1);
}
",
}
`;

exports[`compute-gen WGSL snapshot — match kernel > canonical match() with 3 arms + transparent default 1`] = `
{
  "dispatchSize": [Function],
  "entryPoint": "eval_match",
  "featureStrideF32": 1,
  "fieldOrder": [
    "class",
  ],
  "wgsl": "// Auto-generated by compiler/src/codegen/compute-gen.ts
// Per-feature match() evaluation — one workgroup invocation per fid.

@group(0) @binding(0) var<storage, read> feat_data: array<f32>;
@group(0) @binding(1) var<storage, read_write> out_color: array<u32>;
@group(0) @binding(2) var<uniform> u_count: vec4<u32>;

@compute @workgroup_size(64)
fn eval_match(@builtin(global_invocation_id) gid: vec3<u32>) {
  let fid = gid.x;
  if (fid >= u_count.x) { return; }
  let v_class = feat_data[fid];
  var color: vec4<f32>;
  if (v_class == 0.0) { color = vec4<f32>(0.6666666666666666, 0.8666666666666667, 0.6666666666666666, 1.0); }
  else if (v_class == 1.0) { color = vec4<f32>(0.9607843137254902, 0.8705882352941177, 0.7019607843137254, 1.0); }
  else if (v_class == 2.0) { color = vec4<f32>(0.9411764705882353, 0.9098039215686274, 0.9725490196078431, 1.0); }
  else { color = vec4<f32>(0.0, 0.0, 0.0, 0.0); }
  out_color[fid] = pack4x8unorm(color);
}
",
}
`;

exports[`compute-gen WGSL snapshot — match kernel > canonical match() with single arm + opaque default 1`] = `
{
  "entryPoint": "eval_match",
  "wgsl": "// Auto-generated by compiler/src/codegen/compute-gen.ts
// Per-feature match() evaluation — one workgroup invocation per fid.

@group(0) @binding(0) var<storage, read> feat_data: array<f32>;
@group(0) @binding(1) var<storage, read_write> out_color: array<u32>;
@group(0) @binding(2) var<uniform> u_count: vec4<u32>;

@compute @workgroup_size(64)
fn eval_match(@builtin(global_invocation_id) gid: vec3<u32>) {
  let fid = gid.x;
  if (fid >= u_count.x) { return; }
  let v_kind = feat_data[fid];
  var color: vec4<f32>;
  if (v_kind == 0.0) { color = vec4<f32>(0.5333333333333333, 0.8, 0.5333333333333333, 1.0); }
  else { color = vec4<f32>(0.4, 0.4, 0.4, 1.0); }
  out_color[fid] = pack4x8unorm(color);
}
",
}
`;

exports[`compute-gen WGSL snapshot — ternary (case) kernel > canonical case() with 3 predicates + default 1`] = `
{
  "entryPoint": "eval_case",
  "fieldOrder": [
    "cls",
  ],
  "wgsl": "// Auto-generated by compiler/src/codegen/compute-gen.ts
// case() / ternary chain — first matching predicate wins.

@group(0) @binding(0) var<storage, read> feat_data: array<f32>;
@group(0) @binding(1) var<storage, read_write> out_color: array<u32>;
@group(0) @binding(2) var<uniform> u_count: vec4<u32>;

@compute @workgroup_size(64)
fn eval_case(@builtin(global_invocation_id) gid: vec3<u32>) {
  let fid = gid.x;
  if (fid >= u_count.x) { return; }
  let v_cls = feat_data[fid];
  var color: vec4<f32>;
  if (v_cls == 0.0) { color = vec4<f32>(1.0, 0.0, 0.0, 1.0); }
  else if (v_cls == 1.0) { color = vec4<f32>(0.0, 1.0, 0.0, 1.0); }
  else if (v_cls == 2.0) { color = vec4<f32>(0.0, 0.0, 1.0, 1.0); }
  else { color = vec4<f32>(0.5333333333333333, 0.5333333333333333, 0.5333333333333333, 1.0); }
  out_color[fid] = pack4x8unorm(color);
}
",
}
`;

exports[`compute-gen WGSL snapshot — ternary (case) kernel > canonical case() with compound predicate (multi-field) 1`] = `
{
  "entryPoint": "eval_case",
  "fieldOrder": [
    "rank",
    "class",
  ],
  "wgsl": "// Auto-generated by compiler/src/codegen/compute-gen.ts
// case() / ternary chain — first matching predicate wins.

@group(0) @binding(0) var<storage, read> feat_data: array<f32>;
@group(0) @binding(1) var<storage, read_write> out_color: array<u32>;
@group(0) @binding(2) var<uniform> u_count: vec4<u32>;

@compute @workgroup_size(64)
fn eval_case(@builtin(global_invocation_id) gid: vec3<u32>) {
  let fid = gid.x;
  if (fid >= u_count.x) { return; }
  let v_rank = feat_data[fid * 2u + 0u];
  let v_class = feat_data[fid * 2u + 1u];
  var color: vec4<f32>;
  if (v_rank == 0.0 && v_class == 1.0) { color = vec4<f32>(1.0, 0.0, 1.0, 1.0); }
  else { color = vec4<f32>(0.0, 0.0, 0.0, 1.0); }
  out_color[fid] = pack4x8unorm(color);
}
",
}
`;
